css ex and html updates

--- a/css/index8.html
+++ b/css/index8.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CSS Box Model Border</title>
-    <style>
-    * {
-        border-width: 1px;
-        border-style: solid;
-        
-    }
-    </style>
+      <title>CSS Box Model Border</title>
+      <style>
+        * {
+          border-width: 1px;
+          border-style: solid;
+        }
+        html {
+          border-color: purple;
+        }
+        body {
+          border-color: red;
+        }
+        div {
+          border-color: blue;
+        }
+        p {
+          border-width: 2px;
+          border-color: green;
+        }
+        span {
+          border-width: 3px;
+          border-color: brown;
+          border-style: dotted;
+        }
+        a {
+          border-width: 2px;
+          border-color: coral;
+          border-style: dashed;
+        }
+        .radius {
+          border-width: 2px;
+          border-color: orange;
+          border-radius: 20px;
+        }
+      </style>
   </head>
   <body>
     <div>Lorem ipsum dolor sit amet, <span>consectetur adipiscing elit</span>. Aliquam lobortis pulvinar dolor, sit amet ullamcorper felis volutpat id. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis vel lacus sollicitudin, varius ex at, vehicula ex. Duis facilisis enim at mi faucibus cursus. Proin iaculis erat sem, vitae ullamcorper neque porttitor et. Vivamus mattis velit leo. Sed sodales dui vitae viverra semper.</div>
