--- a/css/index1.html
+++ b/css/index1.html
@@ -6,7 +6,8 @@
         h1 { color: pink}
         p { color: green}
         div { color: yellow}
-        a { color: black}
+        a { color: black} 
+        /* test */
     </style>
   </head>
   <body>
